Aligned Show issue form

--- a/app/assets/stylesheets/issues.scss
+++ b/app/assets/stylesheets/issues.scss
@@ -32,11 +32,14 @@
   grid-gap: 1em;
   max-width: 20em;
   margin: 0 auto;
-  align-items: center;
+  align-items: start;
   justify-items: stretch;
 }
-.grid label{
+.grid label, .grid .label{
   text-align: right;
+}
+.label{
+  font-weight: bold;
 }
 
 
